# agentic-editorial-workflow

./: .gitignore  01_basiceditorial_agent.ipynb  02_editorial_agent_improved_prompt.ipynb  03_research_agent.ipynb  04_editor_with_images.ipynb  README.md  advancements_in_ai_in_2026_a_weekly_news_roundup.md  advancements_in_ai_in_2026_weekly_news_roundup.md  demystifying_the_self-attention_mechanism_in_deep_learning.md  editorial_agent_frontend.py  main.py  pyproject.toml  understanding_the_self-attention_mechanism_in_deep_learning.md
